[project]
name = "was-node-suite-comfyui"
description = "A node suite for ComfyUI with many new nodes, such as image processing, text processing, and more."
version = "1.0.0"
license = "LICENSE"
dependencies = ["cmake", "fairscale>=0.4.4", "git+https://github.com/WASasquatch/img2texture.git", "git+https://github.com/WASasquatch/cstr", "gitpython", "imageio", "joblib", "matplotlib", "numba", "numpy", "opencv-python-headless[ffmpeg]<=4.7.0.72", "pilgram", "git+https://github.com/WASasquatch/ffmpy.git", "rembg", "scikit-image>=0.20.0", "scikit-learn", "scipy", "timm>=0.4.12", "tqdm", "transformers"]

[project.urls]
Repository = "https://github.com/WASasquatch/was-node-suite-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "was-node-suite-comfyui"
Icon = ""
